Games Button Revision Alignment Fix

--- a/css/hangout.css
+++ b/css/hangout.css
@@ -2,9 +2,10 @@
   height: 60px;
   width: 85px;
   background-repeat: no-repeat;
-  background-position: 0px -12px;
+  background-position: 0px 0px;
 }
 .hangout-toolbar-button.hangout-games.hangout-toolbar-button-checked .hangout-toolbar-icon,
 .hangout-toolbar-button.hangout-games .hangout-toolbar-icon:hover {
-  background-position: 0px -54px;
+  background-position: 0px -58px;
 }
+
